--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width = device-width, initial-scale = 1.0">
     <title>Alexia Hassan</title>
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -15,12 +17,12 @@
     <header class="header">
         <a href="#" class="logo">Alexia</a>
 
-        <div class = "bx bx-menu" id = "menu-icon">
+        <div class="bx bx-menu" id="menu-icon">
 
         </div>
 
         <nav class="navbar">
-            <a href="#home" class = "active">Home</a>
+            <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#experience">Experience</a>
             <a href="#projects">Projects</a>
@@ -29,26 +31,39 @@
         </nav>
     </header>
 
-
-    <section class="home" id = "home">
+    <section class="home" id="home">
         <div class="home-content">
-            <h1>Hi, I'm 
+           
+            <h1>Hi, I'm
                 <span>Alexia Hassan</span>
             </h1>
-                <div class = "text-animate">
-                    <h3>
-                        Aspiring Developer
-                    </h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nostrum quidem ullam dolorum, officia hic velit dolor deleniti et non. Tempora explicabo porro, quibusdam sequi repellendus eius praesentium architecto nobis.</p>
-                </div>
+            <div class="text-animate">
+                <h3>
+                    Aspiring Developer
+                </h3>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nostrum quidem ullam dolorum,
+                    officia hic velit dolor deleniti et non. Tempora explicabo porro, quibusdam sequi repellendus eius
+                    praesentium architecto nobis.</p>
+            </div>
 
-                <div class = "btn-box">
-                    <a href="#" class="btn">Resume</a>
-                    <a href="#" class="btn">Contact</a>
-                </div>
-            
+            <div class="btn-box">
+                <a href="#" class="btn">Resume</a>
+                <a href="#" class="btn">Contact</a>
+            </div>
+        </div>
+
+        <video id="background-video" autoplay loop muted>
+            <source src="fish.mp4" type="video/mp4">
+        </video>
+
+        <div class="home-sci">
+            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="#"></a>
+            <a href="#"></a>
         </div>
     </section>
+
+
 
     <script src="js/script.js"></script>
 </body>
