--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Alexia Hassan</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -33,7 +33,7 @@
 
     <section class="home" id="home">
         <div class="home-content">
-           
+
             <h1>Hi, I'm
                 <span>Alexia Hassan</span>
             </h1>
@@ -60,6 +60,35 @@
             <a href="#"><i class='bx bxl-linkedin-square'></i></a>
             <a href="#"></a>
             <a href="#"></a>
+        </div>
+    </section>
+
+
+    <!-- about section -->
+    <section class="about" id="about">
+        <h2 class="heading">About <span>Me</span></h2>
+
+        <div class="about-img">
+            <video id="about-video" autoplay loop muted>
+                <source src="cat.mp4" type="video/mp4">
+            </video>
+            <span class="circle-spin"></span>
+        </div>
+
+        <div class="about-content">
+            <h3>Aspiring Developer</h3>
+            <p>I am a senior at Texas A&M University earning a B.S. in <b>Computer Science</b> and minors in
+                <b>Business</b> and <b>Cybersecurity</b>. My passion is combining my technical knowledge with my
+                creativity. I have diverse technical experience ranging from <b>education</b>, to <b>virtual reality
+                    development</b>, to <b>full-stack development</b>.
+                <br>
+                <br>
+                I have a wonderful black cat named Loki. In my spare time I appreciate painting, music, and life's
+                simple things: videogames and long, frequent naps.
+            </p>
+            <div class="btn-box btns">
+                <a href="" class="btn">Learn More</a>
+            </div>
         </div>
     </section>
 
